<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >
	<LinearLayout
		android:id="@+id/control_panel"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:visibility="gone"
		>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<Button
				android:id="@+id/control_zoom_in"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/zoom_in" />
			<Button
				android:id="@+id/control_zoom_out"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/zoom_out" />
			<Button
				android:id="@+id/control_goto_top"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/goto_top" />
			<Button
				android:id="@+id/control_goto_bottom"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/goto_bottom" />
			<Button
				android:id="@+id/control_copy_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/copy_text" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/control_page_panel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:visibility="gone" >
			<Button
				android:id="@+id/control_goto_next"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/goto_next" />
			<Button
				android:id="@+id/control_goto_prev"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/goto_prev" />
			<TextView
				android:id="@+id/control_page_info"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:singleLine="true" />
			<EditText
				android:id="@+id/control_page_input"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:inputType="numberDecimal"
				android:singleLine="true" >
			</EditText>
			<Button
				android:id="@+id/control_page_input_ok"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:text="@string/goto_ok" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/content_container"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" >
	</LinearLayout>
</LinearLayout>